<resources>
    <string name="app_name">MovieRater</string>
    <string name="name">Name</string>
    <string name="venom">Venom</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="DHint">Enter a short description of the movie</string>
    <string name="NHint">Enter the title of the movie</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="malay">Malay</string>
    <string name="tamil">Tamil</string>
    <string name="releaseDate">Release Date</string>
    <string name="violence">violence</string>
    <string name="not_suitable_for_all_audience">Not suitable for all audience</string>
    <string name="add_movie">Add Movie</string>
    <string name="title">Title:</string>
    <string name="languageWithColon">language:</string>
    <string name="overview">Overview:</string>
    <string name="release_date">Release date:</string>
    <string name="suitable_for_children_below_13">Suitable for children below 13:</string>
    <string name="enter_your_review_for_the_movie_venom">Enter your review for the movie : Venom</string>
    <string name="review">Review</string>
</resources>
