<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MovieDetail">

    <ImageView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:src="@drawable/moviepic"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:id="@+id/camPic"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/title"
              android:text="@string/title"
              app:layout_constraintLeft_toLeftOf="@+id/camPic"
              app:layout_constraintTop_toBottomOf="@+id/camPic"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/titleName"
              app:layout_constraintTop_toBottomOf="@+id/title"
              android:text=" "/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/overview"
              android:text="@string/overview"
              app:layout_constraintTop_toBottomOf="@+id/titleName"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/overviewName"
              app:layout_constraintTop_toBottomOf="@+id/overview"
              android:text=""/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/review"
              android:text="@string/review"
              app:layout_constraintTop_toBottomOf="@+id/overviewName"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/reviewName"
              app:layout_constraintTop_toBottomOf="@+id/review"
              android:text=""/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/language"
              android:text="@string/languageWithColon"
              app:layout_constraintTop_toBottomOf="@+id/reviewName"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/languageName"
              app:layout_constraintTop_toBottomOf="@+id/language"
              android:text=" "/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/relDate"
              android:text="@string/release_date"
              app:layout_constraintTop_toBottomOf="@+id/languageName"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/relName"
              app:layout_constraintTop_toBottomOf="@+id/relDate"
              android:text=" "/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/suitable"
              android:text="@string/suitable_for_children_below_13"
              app:layout_constraintTop_toBottomOf="@+id/relName"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/suitableName"
              app:layout_constraintTop_toBottomOf="@+id/suitable"
              android:text=" "/>

</android.support.constraint.ConstraintLayout>